agregando font-17px linea 226

--- a/core/templates/consolidado_municipal.html
+++ b/core/templates/consolidado_municipal.html
@@ -223,7 +223,7 @@
                                                 <strong>{{ i.catinversion__nombre }}</strong>
                                             </a>
                                             <br>
-                                            <span class="font-color-yellow">{{ i.ejecutado|million|intcomma }} </span>
+                                            <span class="font-color-yellow font-17px">{{ i.ejecutado|million|intcomma }} </span>
                                             <br/>
                                             <span>{{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}%</span>
                                         </h5>
