agregando own.js

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -236,6 +236,7 @@
         ga('create', 'UA-68619423-1', 'auto');
         ga('send', 'pageview');
     </script>
+    <script type="text/javascript" src="{% static 'js/own.js' %}"></script>
 {% endblock %}
 
 {% block extra_footer_scripts %}
