agregando clase de eliminacion de margin-bottom para el grafico

--- a/core/templates/consolidado_municipal.html
+++ b/core/templates/consolidado_municipal.html
@@ -86,7 +86,7 @@
                     </h2>
                     <h5>Millones de córdobas</h5>
                     <hr class="pma-line-2">
-                    <div class="bubbletree-container chart-container">
+                    <div class="bubbletree-container chart-container mt-0">
                         <div id="bubble-1" class="bubbletree-wrapper view-main">
                             <div class="bubbletree"></div>
                         </div>
