corrigiendo estilos de tabla .tb-details

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -22,7 +22,7 @@
 .tb-details tbody tr th:nth-child(1),td:nth-child(1){
     border-right: 1px solid #ddd;
 }
-.tb-details tbody tr th:nth-child(2),td:nth-child(2){
+.tb-details tbody tr:nth-child(1) td{
     padding-left: 2px;
     border-top: none !important;
 }
