agregando clases css para eliminar border top / border bottom

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -37,3 +37,11 @@
     width: 65px;
     padding-top: 10px;
 }
+
+.no-border-top{
+    border-top: none !important;
+}
+
+.no-border-bottom{
+    border-bottom: none !important;
+}
