agregando clases css para mostrar borde

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -45,3 +45,20 @@
 .no-border-bottom{
     border-bottom: none !important;
 }
+.border-sides{
+    border-right: 1px solid #ddd !important;
+    border-left: 1px solid #ddd !important;
+}
+.border-left{
+    border-left: 1px solid #ddd !important;
+}
+.border-right{
+    border-right: 1px solid #ddd !important;
+}
+
+.background-color-gray{
+    background-color: #f3f3f3;
+}
+.background-color-white{
+    background-color: #fff;
+}
