reemplazando estilos css por clases css para los bordes en la tabla

--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -494,17 +494,17 @@
                         <thead>
                         <tr class="bg-primary">
                             <th rowspan="2" colspan="1">Rubros de ingresos</th>
-                            <th colspan="2" class="text-center" style="border-bottom: none;">Inicial</th>
-                            <th colspan="2" class="text-center" style="border-bottom: none;">Actualizado</th>
-                            <th colspan="2" class="text-center" style="border-bottom: none;">Ejecutado</th>
+                            <th colspan="2" class="text-center no-border-bottom">Inicial</th>
+                            <th colspan="2" class="text-center no-border-bottom">Actualizado</th>
+                            <th colspan="2" class="text-center no-border-bottom">Ejecutado</th>
                         </tr>
                         <tr class="bg-primary">
-                            <th colspan="1" style="border-top: none;">Cordobas</th>
-                            <th colspan="1" style="border-top: none;">%</th>
-                            <th colspan="1" style="border-top: none;">Cordobas</th>
-                            <th colspan="1" style="border-top: none;">%</th>
-                            <th colspan="1" style="border-top: none;">Cordobas</th>
-                            <th colspan="1" style="border-top: none;">%</th>
+                            <th colspan="1" class="no-border-top">Cordobas</th>
+                            <th colspan="1" class="no-border-top">%</th>
+                            <th colspan="1" class="no-border-top">Cordobas</th>
+                            <th colspan="1" class="no-border-top">%</th>
+                            <th colspan="1" class="no-border-top">Cordobas</th>
+                            <th colspan="1" class="no-border-top">%</th>
                         </tr>
                         </thead>
                         <tbody>
