--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -96,7 +96,7 @@
 
 {% block main_content %}
     <div class="pma-bg-gray">
-        <div class="container ">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     {% block indicator_title %}
@@ -117,56 +117,6 @@
                         </p>
                     {% endblock %}
                 </div>
-            </div>
-            <div class="row pma-header-summary wide">
-                {% block indicator_summary %}
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div class="info-box">
-                    <span class="info-box-icon pma-icon initial">
-                    </span>
-                            <div class="info-box-content">
-                                <span class="info-box-text"><strong>Inicial {{ asignado|million|intcomma }}</strong></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-md-4">
-                        <div class="info-box">
-                    <span class="info-box-icon pma-icon executed">
-                    </span>
-                            <div class="info-box-content">
-                        <span class="info-box-text">
-                        <strong>Ejecutado {{ ejecutado|million|intcomma }}</strong>
-                        </span>
-                                <span class="info-box-number pma-green"></span>
-                            </div>
-                        </div>
-                    </div>
-                    {% if municipio %}
-                        <div class="col-xs-12 col-sm-12 col-md-4">
-                            <div class="info-box">
-                    <span class="info-box-icon pma-icon municipality-category">
-                    </span>
-                                <div class="info-box-content">
-                                    <span class="info-box-text"><strong>Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</strong></span>
-                                    <span class="info-box-number pma-green"></span>
-                                </div>
-                            </div>
-                        </div>
-                    {% else %}
-                        <div class="col-xs-12 col-sm-12 col-md-4">
-                            <div class="info-box">
-                    <span class="info-box-icon pma-icon pe-7s-date">
-                    </span>
-                                <div class="info-box-content">
-                        <span class="info-box-text">
-                        <strong>Año {{ year }}</strong>
-                        </span>
-                                    <span class="info-box-number pma-green"></span>
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endblock %}
             </div>
         </div>
     </div>
@@ -191,6 +141,58 @@
                     </h3>
                     <h5>Millones de córdobas corrientes</h5>
                     <hr class="pma-line-2 text-center">
+                </div>
+
+                <div class="row pma-header-summary wide">
+                    {% block indicator_summary %}
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="info-box">
+                                <span class="info-box-icon pma-icon initial">
+                                </span>
+                                <div class="info-box-content">
+                                    <span class="info-box-number font-17px">
+                                        <strong>Inicial {{ asignado|million|intcomma }}</strong>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="info-box">
+                                <span class="info-box-icon pma-icon executed">
+                                </span>
+                                <div class="info-box-content">
+                                    <span class="info-box-number font-17px">
+                                        <strong>Ejecutado {{ ejecutado|million|intcomma }}</strong>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        {% if municipio %}
+                            <div class="col-xs-12 col-sm-12 col-md-4">
+                                <div class="info-box">
+                                    <span class="info-box-icon pma-icon municipality-category">
+                                    </span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-number font-17px">
+                                            <strong>Categor&iacute;a de municipio {{ mi_clase.clasificacion }}</strong>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        {% else %}
+                            <div class="col-xs-12 col-sm-12 col-md-4">
+                                <div class="info-box">
+                                    <span class="info-box-icon pma-icon pe-7s-date">
+                                    </span>
+                                    <div class="info-box-content">
+                                        <span class="info-box-number font-17px">
+                                            <strong>Año {{ year }}</strong>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endblock %}
                 </div>
                 {% block charts %}
                     <div class="col-xs-12 col-sm-12 col-md-7">
@@ -242,7 +244,7 @@
                                 </tr>
                             {% endfor %}
                             <tfoot>
-                            <tr class="">
+                            <tr>
                                 <td>TOTAL</td>
                                 {% if periodo_list|keyvalue:year == 'I' %}
                                     <td class="text-right">{{ asignado|million|intcomma }}</td>
